# Nest

./: .flake8  .gitignore  README.md  docker-compose-dev.yml  docker-compose.certbot.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml
backend/: .env.dev  .env.example  Dockerfile  Dockerfile.prod  Dockerfile.stage  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/db_merge/: db_merge_assessors.py  db_merge_fired.py  db_merge_managers.py  remove_created.py  remove_created_fired.py  remove_created_managers.py
backend/db_merge/rollback/: assessors.json  assessors.py  managers.json  managers.py
backend/src/: manage.py
backend/src/apps/assessors/: admin.py  api.py  apps.py  (+10 more)
backend/src/assessors/: admin.py  api.py  apps.py  filters.py  models.py  schemas.py  serializers.py  urls.py  utils.py
backend/src/blacklist/: admin.py  apps.py  models.py
backend/src/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/src/core/: celery.py  decorators.py  export.py  middleware.py  mixins.py  pagination.py  permissions.py  schemas.py  serializers.py  settings.py  urls.py  users.py  utils.py  validators.py
backend/src/projects/: admin.py  api.py  apps.py  filters.py  models.py  schemas.py  serializers.py  urls.py
backend/src/templates/: 403.html  swagger_login.html
backend/src/tests/: common.py  test_assessors.py  test_auth.py  test_projects.py
backend/src/users/: admin.py  api.py  apps.py  models.py  schemas.py  serializers.py  urls.py  utils.py
backend/venv3/Scripts/: activate  activate.bat
(+633 files in other folders)
